--- a/.github/workflows/tf-destry.yml
+++ b/.github/workflows/tf-destry.yml
@@ -41,7 +41,7 @@ jobs:
         aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}    
     
     - name: Terraform Init
-      run: terraform init -backend-config="bucket=$BUCKET_NAME" -backend-config="key=${{ env.TF_VAR_STATE_FILE }}" -backend-config="dynamodb_table=$DYNAMO_DB" -backend-config="encrypt=true"
+      run: terraform init -backend-config="bucket=$BUCKET_NAME" -backend-config="key=$TF_VAR_STATE_FILE" -backend-config="dynamodb_table=$DYNAMO_DB" -backend-config="encrypt=true"
       #run: terraform init -no-color -reconfigure -force-copy -backend-config="bucket=$BUCKET_NAME" -backend-config="key=${{ env.TF_VAR_STATE_FILE }}" -backend-config="dynamodb_table=$DYNAMO_DB" -backend-config="encrypt=true"
       env:
         TF_VAR_STATE_FILE: "$ENV-${{ github.event.repository.name }}.tfstate"  
